added the delete functionality; fixed some minor bugs; additional css styling

--- a/Develop/public/assets/css/indexOverride.css
+++ b/Develop/public/assets/css/indexOverride.css
@@ -7,6 +7,7 @@ background-color: var(--bg);
 .note-title {
 color: #ffffff;
 background-color: var(--bg);
+font-size: 36px;
 }
 .note-textarea {
 color: white;
